# gatekeeper-exp-groundstation

./: .gitignore  .gitmodules  Dockerfile  create_julia_sysimage.jl  docker-compose.yaml  super_client_configuration_file.xml  vimrc
colcon_ws/: Makefile  pong.py  reset_camera.py  super_client_configuration_file.xml  test.py  test_timer.cpp  timer.h
colcon_ws/px4_logs/: log_0_2023-1-7-18-46-30.ulg  log_275_2023-6-30-07-37-50.ulg  log_280_2023-6-30-08-10-36.ulg  log_283_2023-6-30-08-25-04.ulg
colcon_ws/src/esdf_splitter/: CMakeLists.txt  package.xml
colcon_ws/src/esdf_splitter/src/: esdf_splitter.cpp
colcon_ws/src/gatekeeper/: package.xml  setup.py
colcon_ws/src/gatekeeper/gatekeeper/: Manifest.toml  Project.toml  gatekeeper-julia.jl  joystick_to_goal_pose.py  mpc.py  mpc_planner_OSQP.py  node-gatekeeper.jl  node-gatekeeper2.jl  path_to_trajectory.py  publish_nominal.py  publish_return.py  publish_takeoff.py  spoof_px4.py  test_gatekeeper.jl
colcon_ws/src/gatekeeper/gatekeeper/_dev_and_tests/: cvxpy_mpc.py  mpc_planner_CVXPY.py  osqp_mpc.py  osqp_test.py
colcon_ws/src/gatekeeper/launch/: gatekeeper.launch.py  test_gatekeeper.launch.py
colcon_ws/src/ground_station_launch/: CMakeLists.txt  package.xml
colcon_ws/src/ground_station_launch/analyze/: actual_traj.pkl  analyze_bags.py  nom_trajs.pkl  plot_nom_vs_com.py  plot_trajs.py  timings.eps
colcon_ws/src/ground_station_launch/config/: default.rviz  groundstation.rviz  groundstation_mapping.rviz  teleop.rviz
colcon_ws/src/ground_station_launch/launch/: .gs.launch.py.swp  bag_viz.launch.py  gatekeeper.launch.py  gs.launch.py  octomap_server_launch.py  rs_decomp.launch.py  video.launch.py
